# proton

./: .gitignore  AGENTS.md  LICENSE.md  README.md  moon.mod  moon.mod.json  moon.work  moon.work.bak  native_link_config.mjs
.github/workflows/: ci.yml
app/: README.md  command_extension.mbt  command_extension_order.mbt  create.mbt  facade.mbt  facade_wbtest.mbt  framework_ipc_transport.mbt  framework_process.mbt  framework_process_config.mbt  install.mbt  moon.mod  moon.mod.json  moon.pkg  pkg.generated.mbti  prepare_wbtest.mbt  types.mbt
app/framework/: main.mbt  moon.pkg  pkg.generated.mbti
bootstrap/: config_decode.mbt  config_document_edit.mbt  config_document_load.mbt  config_paths.mbt  config_test.mbt  control_plane.mbt  moon.mod  moon.mod.json  moon.pkg  pkg.generated.mbti
catalog/: catalog_test.mbt  extension_catalog.mbt  extension_descriptor.mbt  extension_link_plan.mbt  moon.mod  moon.mod.json  moon.pkg  result_zip.mbt
cef/: README.md  binding.mbt  capabilities.mbt  cef_native.c  cef_wbtest.mbt  config.mbt  moon.mod  moon.mod.json  moon.pkg  native_link_config.mjs  pkg.generated.mbti  runtime.mbt
cli/: cef_cache.mbt  cef_download.mbt  cef_fs.mbt  cef_json.mbt  cef_platform.mbt  cef_prebuilt.mbt  cef_project.mbt  cef_runtime_assembly.mbt  cef_runtime_manifest.mbt  cef_setup.mbt  cef_validation.mbt  main.mbt  moon.mod  moon.pkg  native.c  pkg.generated.mbti  version_check_wbtest.mbt
cli/arguments/: matches.mbt  moon.pkg  pkg.generated.mbti
cli/build_cmd/: build.mbt  build_wbtest.mbt  moon.pkg  pkg.generated.mbti
cli/cef/: cef_cache.mbt  cef_download.mbt  cef_fs.mbt  cef_json.mbt  cef_platform.mbt  cef_platform_wbtest.mbt  cef_prebuilt.mbt  cef_project.mbt  cef_runtime_assembly.mbt  cef_runtime_manifest.mbt  cef_setup.mbt  cef_validation.mbt  error.mbt  moon.pkg  pkg.generated.mbti
cli/codegen/: README.md  error.mbt  moon.pkg  (+6 more)
codegen/: ATTRIBUTE_CODEGEN_PLAN.md  README.md  attribute_codegen_parse.mbt  attribute_codegen_render.mbt  attribute_codegen_test.mbt  attribute_codegen_types.mbt  moon.mod  moon.pkg  pkg.generated.mbti
config/: api.mbt  config_test.mbt  error.mbt  imports.mbt  moon.mod  moon.pkg  parser.mbt  pkg.generated.mbti  project_config.mbt  project_decode.mbt  project_paths.mbt  result_zip.mbt
core/: moon.mod  moon.mod.json
docs/: async-event-loop-bridge.zh.md  embedded-chromium-backend-design.zh.md  lepus-package-migration-plan.md  moon-proton-and-moon-ext-design.md  multiprocess-architecture.md  native-js-bridge-architecture.zh.md  new-project.md  packaging.md  proton-architecture.md  proton-bridge-plan.md  proton-dev-extension-js-injection-plan.md  proton-macos-runtime-plan.md  proton-native-ffi-plan.md  proton-new.md  three-layer-architecture.zh.md
e2e/: README.md  moon.mod
examples/: Readme.md  moon.mod  moon.mod.json  moonbit-app-runtime-demo.txt
extensions/: README.md  moon.mod  moon.mod.json  moon.pkg  pkg.generated.mbti  sets.mbt
global_hotkey/: global_hotkey.mbt  global_hotkey_wbtest.mbt  moon.mod  moon.mod.json
ipc/: README.md  moon.mod
ipc_ws/: README.md  moon.mod
manifest/: json_helpers.mbt  manifest_extensions.mbt  manifest_test.mbt  moon.mod  moon.mod.json  moon.pkg  pkg.generated.mbti
native/: CMakeLists.txt  README.md
native/include/: proton_native.h
native/scripts/: verify_link_config.mjs
native/src/: app_runner.h  app_runner.m  app_runner_stub.c  app_runner_win.c  cef_process.c  proton.c  proton_config.c  proton_config.h  proton_engine.h  proton_engine_cef_mac.m  proton_engine_cef_win.c  proton_engine_none.c  proton_internal.h  proton_json.c  proton_json.h  proton_notification_queue.c  proton_notification_queue.h  proton_state.c  proton_state.h
native/src/engine/: notification_stub.c  proton_engine_none.c
native/src/engine/cef_common/: assets.h  bridge_bootstrap.generated.h  bridge_bootstrap.js  bridge_json.h  bridge_lifecycle.c  bridge_lifecycle.h  bridge_policy.c  bridge_policy.h  bridge_renderer.c  bridge_renderer.h  json_fields.h  ref_count.h  strings.h
native/src/engine/cef_linux/: proton_engine_cef_linux.c  proton_linux_titlebar.c  proton_linux_titlebar.h
native/src/engine/cef_mac/: dialog.h  dialog.m  menu.h  menu.m  notification.m  proton_engine_cef_mac.m  scheme.h  scheme.m  window.h
native/src/engine/cef_win/: proton_engine_cef_win.c  proton_win_titlebar.c  proton_win_titlebar.h
native/tests/: bridge_bootstrap.test.mjs  proton_exports_smoke.c  proton_linux_overlay_smoke.c  proton_linux_titlebar_test.c  proton_notification_queue_test.c  proton_smoke.c  proton_win_overlay_smoke.c  proton_win_titlebar_test.c
notification/: moon.mod  moon.mod.json  moon.pkg  notification_wbtest.mbt
proton/: MACOS_BUNDLE_HANDOFF.md  command_extension.mbt  config_bridge.mbt  exports.mbt  facade.mbt  facade_bridge.mbt  facade_builders.mbt  facade_dialogs.mbt  facade_entry.mbt  facade_error.mbt  facade_macos_layout.mbt  facade_manifest.mbt  facade_runner.mbt  facade_runtime.mbt  facade_runtime_wakeup.mbt  facade_types.mbt  facade_wbtest.mbt  framework_process.mbt  framework_process_config.mbt  moon.mod  moon.pkg  native_link_config.mjs  order.mbt  pkg.generated.mbti  types.mbt
proton_config/: ast.mbt  moon.mod  moon.pkg  moon_mod.mbt  parser.mbt
runtime/: README.md  moon.mod  moon.mod.json
scripts/: Readme.md  e2e_bridge_smoke.mjs  e2e_cdp_smoke.mjs  embed_asset.mjs  generate_bridge_bootstrap.mjs  generate_new_templates.mjs  install_webview2_headers.ps1  macos_package_smoke.mjs  setup_cef.mjs  sync_libwebview.mjs  verify_generated.mjs  verify_prebuilt_abi.mjs  verify_prebuilt_abi_test.mjs  verify_release_metadata.mjs  windows_package_smoke.ps1
src/: builder.mbt  builder_wbtest.mbt  command_extension.mbt  command_extension_order.mbt  create.mbt  exports.mbt  facade.mbt  facade_wbtest.mbt  framework_process.mbt  framework_process_config.mbt  moon.pkg  pkg.generated.mbti  prepare_wbtest.mbt  stub.c  webview.mbt  webview_smoke_test.mbt
tooling/: copy_helpers.mbt  moon.mod  moon.mod.json  moon.pkg  registry_codegen.mbt  tooling_test.mbt
tray/: moon.mod  moon.mod.json  moon.pkg  tray.mbt
(+678 files in other folders)
